--- a/Alp.Com.Igu/WpfMain/AvvisoView.xaml
+++ b/Alp.Com.Igu/WpfMain/AvvisoView.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="AlpTlc.Pre.Igu.Views.AvvisoView"
+﻿<Window x:Class="Alp.Com.Igu.WpfMain.AvvisoView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:AlpTlc.Pre.Igu.Views"
-        xmlns:localConverters="clr-namespace:AlpTlc.Pre.Igu.Views.Converters"
+        xmlns:local="clr-namespace:Alp.Com.Igu.WpfMain"
+        xmlns:localConverters="clr-namespace:Alp.Com.Igu.Views.Converters"
         mc:Ignorable="d"
         WindowStyle="None"
         WindowStartupLocation="CenterScreen"
