--- a/Alp.Com.Igu/WpfMain/ImpostazioniView.xaml
+++ b/Alp.Com.Igu/WpfMain/ImpostazioniView.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Class="AlpTlc.Pre.Igu.Views.ImpostazioniView"
+﻿<UserControl x:Class="Alp.Com.Igu.WpfMain.ImpostazioniView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:AlpTlc.Pre.Igu.Views"
-             xmlns:localConverters="clr-namespace:AlpTlc.Pre.Igu.Views.Converters"
-             xmlns:viewModels="clr-namespace:AlpTlc.Pre.Igu.ViewModels;assembly=AlpTlc.Pre.Igu"
-             xmlns:custCtrls="clr-namespace:AlpTlc.Pre.Igu.CustomControls"
+             xmlns:localConverters="clr-namespace:Alp.Com.Igu.Views.Converters"
+             xmlns:viewModels="clr-namespace:Alp.Com.Igu.ViewModels;assembly=Alp.Com.Igu"
+             xmlns:custCtrls="clr-namespace:Alp.Com.Igu.CustomControls"
              mc:Ignorable="d" 
              d:DesignHeight="980" d:DesignWidth="1850">
 
