--- a/Alp.Com.Igu/WpfMain/MainWindowView.xaml
+++ b/Alp.Com.Igu/WpfMain/MainWindowView.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="AlpTlc.Pre.Igu.Views.MainWindowView"
+﻿<Window x:Class="Alp.Com.Igu.WpfMain.MainWindowView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:AlpTlc.Pre.Igu.Views"
-        xmlns:localConverters="clr-namespace:AlpTlc.Pre.Igu.Views.Converters"
-        xmlns:custCtrls="clr-namespace:AlpTlc.Pre.Igu.CustomControls"
+        xmlns:local="clr-namespace:Alp.Com.Igu.Views"
+        xmlns:localConverters="clr-namespace:Alp.Com.Igu.Views.Converters"
+        xmlns:custCtrls="clr-namespace:Alp.Com.Igu.CustomControls"
         mc:Ignorable="d"
         Height="600" Width="920"
         ResizeMode="CanResize"
@@ -37,6 +37,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="18*"/>
+                <RowDefinition.Height="23*"/>
             </Grid.RowDefinitions>
 
             <DockPanel x:Name="dckBarTitle" Grid.Row="0" >
@@ -252,6 +253,7 @@
                             Margin="10"
                             Content="{Binding CurrentView}"/>
 
+            <ContentControl Grid.Row="2"/>
         </Grid>
     </Border>
 
