--- a/Alp.Com.Igu/WpfProfiler/PageProfiler.xaml
+++ b/Alp.Com.Igu/WpfProfiler/PageProfiler.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="Crs.Com.GuiWpfLayer.WpfProfiler.PageProfiler"
+﻿<Page x:Class="Alp.Com.Igu.WpfProfiler.PageProfiler"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Crs.Com.GuiWpfLayer.WpfProfiler"
+      xmlns:local="clr-namespace:Alp.Com.Igu.WpfProfiler"
       mc:Ignorable="d" 
        d:DesignHeight="1080" d:DesignWidth="1920"
       Title="PageProfiler">
@@ -178,7 +178,7 @@
                                     <Label Grid.Column="1"  Grid.Row="1" Content="Distanza" Foreground="White" Width="Auto" HorizontalAlignment="Right" FontSize="16"/>
 
                                     <Label Name="lblLenVal1" Grid.Column="0" Grid.Row="2" Content="X1-X4" Foreground="White" Width="Auto" Background="Gray" FontSize="16"/>
-                                    <Label Name="lblLenDis1" Grid.Column="1" Grid.Row="2" Content="10500mm" Foreground="White" Width="Auto" Background="Gray" Height="35" VerticalAlignment="Center" FontSize="16"/>
+                                    <Label Name="lblLenDis1" Grid.Column="1" Grid.Row="2" Content="10500 mm" Foreground="White" Width="Auto" Background="Gray" Height="35" VerticalAlignment="Center" FontSize="16"/>
                           
                                 </Grid>
                             </Border>
@@ -197,8 +197,8 @@
                                     <Label Grid.Column="0" Grid.Row="1" Content="Valori" Foreground="White" Width="Auto" FontSize="16"/>
                                     <Label Grid.Column="1"  Grid.Row="1" Content="Distanza" Foreground="White" Width="Auto" HorizontalContentAlignment="Right" FontSize="16"/>
 
-                                    <Label Name="lblLenVal2" Grid.Column="0" Grid.Row="2" Content="X1-X4" Foreground="White" Width="Auto" Background="Gray" FontSize="16"/>
-                                    <Label Name="lblLenDis2" Grid.Column="1" Grid.Row="2" Content="10500mm" Foreground="White" Width="Auto" Background="Gray" HorizontalContentAlignment="Right" FontSize="16"/>
+                                    <Label Name="lblWdtVal2" Grid.Column="0" Grid.Row="2" Content="X1-X4" Foreground="White" Width="Auto" Background="Gray" FontSize="16"/>
+                                    <Label Name="lblWdtDis2" Grid.Column="1" Grid.Row="2" Content="10500 mm" Foreground="White" Width="Auto" Background="Gray" HorizontalContentAlignment="Right" FontSize="16"/>
                                 </Grid>
                             </Border>
                             <Border Name="bg3" Grid.Column="2" BorderBrush="#FF2D2D2D" BorderThickness="2" Background="#FF404040" CornerRadius="5" Margin="3">
@@ -293,7 +293,7 @@
                 <Grid Name="GridRight" Background="#FF252323"  >
                     <Grid.RowDefinitions>
                         <RowDefinition Height="100"/>
-                        <RowDefinition Height="150"/>
+                        <RowDefinition Height="400"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
@@ -302,6 +302,25 @@
                     <Border Grid.Column="0"  Grid.Row="0" Margin="10" Width="280" Height="60" CornerRadius="10" Background="#FF403F3F" HorizontalAlignment="Center" VerticalAlignment="Center" >
                         <Label  Content="VISTA PROFILI" Foreground="White" VerticalAlignment="Center"  HorizontalContentAlignment="Center" FontSize="24" />
                     </Border>
+
+                    <Grid Name="grdProfiliDesign" Grid.Row="1" Margin="10,0,10,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="300"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+
+                        <StackPanel Grid.Column="0">
+                            <Label Content="Profilo 1" Foreground="White" VerticalAlignment="Center" Width="Auto" FontSize="16" HorizontalAlignment="Center" />
+                            <Image Source="/Alp.Com.Igu;component/Images/ProfiloLato1Conc.png" Height="215" Margin="10,0,10,0"/>
+                            <Label Content="Z0   -   Z1" Foreground="White" VerticalAlignment="Center" Width="Auto" FontSize="16" HorizontalAlignment="Left" />
+                        </StackPanel>
+                        <StackPanel Grid.Column="1">
+                            <Label Content="Profilo 2" Foreground="White" VerticalAlignment="Center" Width="Auto" FontSize="16" HorizontalAlignment="Center" />
+                            <Image Source="/Alp.Com.Igu;component/Images/ProfiloLato2Conv.png" Height="215" Margin="10,0,10,0"/>
+                            <Label Content="Z0   -   Z1" Foreground="White" VerticalAlignment="Center" Width="Auto" FontSize="16" HorizontalAlignment="Right" />
+                        </StackPanel>
+                    </Grid>
+                    
                     <Grid Grid.Row="2">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="100"/>
@@ -314,9 +333,9 @@
                             </Grid.ColumnDefinitions>
 
 
-                            <Border Name="bg4" Grid.Column="0" Grid.Row="1" BorderBrush="#FF2D2D2D" BorderThickness="2" Background="#FF404040" CornerRadius="5" Margin="3">
+                            <Border Name="bg4" Grid.Column="0" Grid.Row="1" BorderBrush="#FF2D2D2D" BorderThickness="2" Background="#FF404040" CornerRadius="5" Margin="20,3,20,3">
 
-                                <Grid Name="GridRight1" TextBlock.FontSize="16">
+                                <Grid Name="GridRight1" TextBlock.FontSize="16" >
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="35"/>
                                         <RowDefinition Height="35"/>
@@ -327,21 +346,18 @@
                                         <ColumnDefinition Width="*"/>
                                     </Grid.ColumnDefinitions>
                                     <Label Grid.Column="0" Grid.Row="0" Content="OMEGA" Foreground="White" VerticalAlignment="Center" Width="Auto" FontSize="16" />
-                                    <Label Grid.Column="0" Grid.Row="1" Content="Valori" Foreground="White" Width="Auto" Height="Auto" FontSize="16"/>
-                                    <Label Grid.Column="1"  Grid.Row="1" Content="Distanza" Foreground="White" Width="Auto" HorizontalAlignment="Right" FontSize="16"/>
-
-                                    <Label Name="lblOmega1" Grid.Column="0" Grid.Row="2" Content="Z0-Z1" Foreground="White" Width="Auto" Background="Gray" FontSize="16"/>
-                                    <Label Name="lblOmega2" Grid.Column="1" Grid.Row="2" Content="10500mm" Foreground="White" Width="Auto" Background="Gray" Height="35" VerticalAlignment="Center" HorizontalContentAlignment="Right" FontSize="16"/>
+                                    <Label Grid.Column="0" Grid.Row="2" Content="Z0-Z1" Foreground="White" Width="Auto" Background="Gray" FontSize="16"/>
+                                    <Label Name="lblOmegaL1" Grid.Column="1" Grid.Row="2" Content="10500 mm" Foreground="White" Width="Auto" Background="Gray" Height="35" VerticalAlignment="Center" HorizontalContentAlignment="Right" FontSize="16"/>
 
                                 </Grid>
                             </Border>
 
-                            <Border Name="bg5" Grid.Column="1" Grid.Row="1" BorderBrush="#FF2D2D2D" BorderThickness="2" Background="#FF404040" CornerRadius="5" Margin="3">
+                            <Border Name="bg5" Grid.Column="1" Grid.Row="1" BorderBrush="#FF2D2D2D" BorderThickness="2" Background="#FF404040" CornerRadius="5" Margin="20,3,20,3">
 
                                 <Grid Name="GridRight2" TextBlock.FontSize="16">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="35"/>
-                                        <RowDefinition Height="35"/>
+                                        <RowDefinition Height="Auto"/>
 
                                     </Grid.RowDefinitions>
                                     <Grid.ColumnDefinitions>
@@ -349,11 +365,8 @@
                                         <ColumnDefinition Width="*"/>
                                     </Grid.ColumnDefinitions>
                                     <Label Grid.Column="0" Grid.Row="0" Content="OMEGA" Foreground="White" VerticalAlignment="Center" Width="Auto" FontSize="16" />
-                                    <Label Grid.Column="0" Grid.Row="1" Content="Valori" Foreground="White" Width="Auto" Height="Auto" FontSize="16"/>
-                                    <Label Grid.Column="1"  Grid.Row="1" Content="Distanza" Foreground="White" Width="Auto" HorizontalAlignment="Right" FontSize="16"/>
-
-                                    <Label Name="lblOmega1B" Grid.Column="0" Grid.Row="2" Content="Z0-Z1" Foreground="White" Width="Auto" Background="Gray" FontSize="16"/>
-                                    <Label Name="lblOmega2B" Grid.Column="1" Grid.Row="2" Content="10500mm" Foreground="White" Width="Auto" Background="Gray" Height="35" VerticalAlignment="Center" HorizontalContentAlignment="Right" FontSize="16"/>
+                                    <Label Grid.Column="0" Grid.Row="2" Content="Z0-Z1" Foreground="White" Width="Auto" Background="Gray" FontSize="16"/>
+                                    <Label Name="lblOmegaL2" Grid.Column="1" Grid.Row="2" Content="10500 mm" Foreground="White" Width="Auto" Background="Gray" Height="35" VerticalAlignment="Center" HorizontalContentAlignment="Right" FontSize="16"/>
 
                                 </Grid>
                             </Border>
@@ -362,24 +375,20 @@
 
                         </Grid>
                         <StackPanel Grid.Row="1">
-                            <Border Name="bg6" Grid.Column="1" Grid.Row="2" BorderBrush="#FF2D2D2D" BorderThickness="2" Background="#FF404040" CornerRadius="5" Margin="3">
+                            <Border Name="bg6" Grid.Column="1" Grid.Row="2" BorderBrush="#FF2D2D2D" BorderThickness="2" Background="#FF404040" CornerRadius="5" Margin="3,50,3,3" HorizontalAlignment="Center">
 
-                                <Grid Name="GridRight3" TextBlock.FontSize="16">
+                                <Grid Name="GridRight3" TextBlock.FontSize="16" HorizontalAlignment="Center">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="35"/>
                                         <RowDefinition Height="35"/>
 
                                     </Grid.RowDefinitions>
                                     <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="150"/>
-                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="200"/>
+
                                     </Grid.ColumnDefinitions>
                                     <Label Grid.Column="0" Grid.Row="0" Content="SPESSORE" Foreground="White" VerticalAlignment="Center" Width="Auto" FontSize="16" />
-                                    <Label Grid.Column="0" Grid.Row="1" Content="Valori" Foreground="White" Width="Auto" Height="Auto" FontSize="16"/>
-                                    <Label Grid.Column="1"  Grid.Row="1" Content="Distanza" Foreground="White" Width="Auto" HorizontalAlignment="Right" FontSize="16"/>
-
-                                    <Label Name="lblSpessore" Grid.Column="0" Grid.Row="2" Content="Z0-Z1" Foreground="White" Width="Auto" Background="Gray" FontSize="16"/>
-                                    
+                                    <Label Name="lblSpessore" Grid.Column="0" Grid.Row="2" Content="10 mm" Foreground="White" Width="Auto" Background="Gray" FontSize="16"/>
                                 </Grid>
                             </Border>
 
